--- a/CSS/style.css
+++ b/CSS/style.css
@@ -75,17 +75,17 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------*/
 @font-face {
   font-family: "Gilroy";
-  src: url("../fonts/gilroy-bold.eot");
+  src: url("../FONTS/gilroy-bold.eot");
   /* IE 9 Compatibility Mode */
-  src: url("../fonts/gilroy-bold.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-bold.woff2") format("woff2"), url("../fonts/gilroy-bold.woff") format("woff"), url("../fonts/gilroy-bold.ttf") format("truetype"), url("../fonts/gilroy-bold.svg#gilroy-bold") format("svg");
+  src: url("../FONTS/gilroy-bold.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-bold.woff2") format("woff2"), url("../FONTS/gilroy-bold.woff") format("woff"), url("../FONTS/gilroy-bold.ttf") format("truetype"), url("../FONTS/gilroy-bold.svg#gilroy-bold") format("svg");
   /* Chrome < 4, Legacy iOS */
 }
 
 @font-face {
   font-family: "Gilroy";
-  src: url("../fonts/gilroy-medium.eot");
+  src: url("../FONTS/gilroy-medium.eot");
   /* IE 9 Compatibility Mode */
-  src: url("../fonts/gilroy-medium.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-medium.woff2") format("woff2"), url("../fonts/gilroy-medium.woff") format("woff"), url("../fonts/gilroy-medium.ttf") format("truetype"), url("../fonts/gilroy-medium.svg#gilroy-medium") format("svg");
+  src: url("../FONTS/gilroy-medium.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-medium.woff2") format("woff2"), url("../FONTS/gilroy-medium.woff") format("woff"), url("../FONTS/gilroy-medium.ttf") format("truetype"), url("../FONTS/gilroy-medium.svg#gilroy-medium") format("svg");
   /* Chrome < 4, Legacy iOS */
 }
 
