--- a/SCSS/fonts.scss
+++ b/SCSS/fonts.scss
@@ -1,18 +1,18 @@
 @font-face {
 	font-family: "Gilroy";
-	src: url("../fonts/gilroy-bold.eot"); /* IE 9 Compatibility Mode */
-	src: url("../fonts/gilroy-bold.eot?#iefix") format("embedded-opentype"),
+	src: url("../FONTS/gilroy-bold.eot"); /* IE 9 Compatibility Mode */
+	src: url("../FONTS/gilroy-bold.eot?#iefix") format("embedded-opentype"),
 		/* IE < 9 */ url("../fonts/gilroy-bold.woff2") format("woff2"),
-		/* Super Modern Browsers */ url("../fonts/gilroy-bold.woff") format("woff"),
-		/* Firefox >= 3.6, any other modern browser */ url("../fonts/gilroy-bold.ttf") format("truetype"),
-		/* Safari, Android, iOS */ url("../fonts/gilroy-bold.svg#gilroy-bold") format("svg"); /* Chrome < 4, Legacy iOS */
+		/* Super Modern Browsers */ url("../FONTS/gilroy-bold.woff") format("woff"),
+		/* Firefox >= 3.6, any other modern browser */ url("../FONTS/gilroy-bold.ttf") format("truetype"),
+		/* Safari, Android, iOS */ url("../FONTS/gilroy-bold.svg#gilroy-bold") format("svg"); /* Chrome < 4, Legacy iOS */
 }
 @font-face {
 	font-family: "Gilroy";
-	src: url("../fonts/gilroy-medium.eot"); /* IE 9 Compatibility Mode */
-	src: url("../fonts/gilroy-medium.eot?#iefix") format("embedded-opentype"),
+	src: url("../FONTS/gilroy-medium.eot"); /* IE 9 Compatibility Mode */
+	src: url("../FONTS/gilroy-medium.eot?#iefix") format("embedded-opentype"),
 		/* IE < 9 */ url("../fonts/gilroy-medium.woff2") format("woff2"),
-		/* Super Modern Browsers */ url("../fonts/gilroy-medium.woff") format("woff"),
-		/* Firefox >= 3.6, any other modern browser */ url("../fonts/gilroy-medium.ttf") format("truetype"),
-		/* Safari, Android, iOS */ url("../fonts/gilroy-medium.svg#gilroy-medium") format("svg"); /* Chrome < 4, Legacy iOS */
+		/* Super Modern Browsers */ url("../FONTS/gilroy-medium.woff") format("woff"),
+		/* Firefox >= 3.6, any other modern browser */ url("../FONTS/gilroy-medium.ttf") format("truetype"),
+		/* Safari, Android, iOS */ url("../FONTS/gilroy-medium.svg#gilroy-medium") format("svg"); /* Chrome < 4, Legacy iOS */
 }
