--- a/CSS/style.css
+++ b/CSS/style.css
@@ -108,7 +108,7 @@ body {
 }
 
 .container {
-  max-width: 65.39792%;
+  width: 65.39792%;
   margin: 0 auto;
   padding: 0 20px;
   min-width: 320px;
